Bug 28625 - [REGRESSION] Focus ring problems in contentEditable areas
Summary: [REGRESSION] Focus ring problems in contentEditable areas
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Critical
Assignee: Dave Hyatt
URL:
Keywords: Regression
Depends on:
Blocks: 20329
  Show dependency treegraph
 
Reported: 2009-08-21 14:44 PDT by Peter Kasting
Modified: 2009-08-21 15:20 PDT (History)
2 users (show)

See Also:


Attachments
Patch to clamp to lineTop/lineBottom for all outline rects from line boxes. (3.69 KB, patch)
2009-08-21 15:16 PDT, Dave Hyatt
simon.fraser: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Kasting 2009-08-21 14:44:50 PDT
Filing on behalf of dglazkov, originally noted on bug 20329 comment 18.

"Landing [r47440 to fix bug 20329] introduced a pretty ghastly regression: The focus ring now snakes around overflowing objects in contenteditable areas. Take a look at this for instance on a ToT:

http://trac.webkit.org/export/47638/trunk/LayoutTests/editing/pasteboard/styled-element-markup.html

Part of the reason this wasn't caught because we don't run pixel tests on build bots."
Comment 1 Dave Hyatt 2009-08-21 15:03:14 PDT
Consequence of letting boxes have their full height even in quirks mode.  All focus ring rects that are added need to clamp themselves to the root line box top and line box bottom.
Comment 2 Dave Hyatt 2009-08-21 15:04:19 PDT
This is a quirks-mode-only bug basically.
Comment 3 Dave Hyatt 2009-08-21 15:14:26 PDT
"pretty ghastly regression" is a bit of an exaggeration by the way, given that contenteditable areas with overflow:visible set are pretty rare (as having an outline grow as you type is pretty bad UI to start with), and that the regression doesn't occur in strict mode either. :)
Comment 4 Dave Hyatt 2009-08-21 15:16:48 PDT
Created attachment 38405 [details]
Patch to clamp to lineTop/lineBottom for all outline rects from line boxes.
Comment 5 Dave Hyatt 2009-08-21 15:20:09 PDT
Fixed in r47643.