https://bugs.webkit.org/show_bug.cgi?id=28625, focus rings don't respect the non-strict mode line box shrinking quirk.  Make sure outlines don't extend outside the lineTop and lineBottom of the root line box.

Reviewed by Simon Fraser.

Covered by existing tests.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addFocusRingRects):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::addFocusRingRects):
(WebCore::RenderInline::paintOutline):



Canonical link: https://commits.webkit.org/39226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47643 268f45cc-cd09-0410-ab3c-d52691b4dbfc